--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.14.0", features = ["dynamic_linking"] }  # disable dynamic_linking on release
+rand = "0.8.5"
 
 [profile.dev]
 opt-level = 1
